// Vitest Snapshot v1

exports[`Switch > Switch baseVue demo works fine 1`] = `
<div
  class=""
>
  <div
    class="t-cell-group"
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          自定义颜色
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style="background-color: rgb(0, 168, 112);"
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          异步操作
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Switch > Switch descVue demo works fine 1`] = `
<div
  class=""
>
  <div
    class="t-cell-group"
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked"
          >
            <span
              class="t-switch__text"
            >
              描述信息
            </span>
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch"
          >
            <span
              class="t-switch__text"
            >
              描述信息
            </span>
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          自定义颜色
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked"
          >
            <span
              class="t-switch__text"
            >
              描述信息
            </span>
            <span
              class="t-switch__node"
              style="background-color: rgb(0, 168, 112);"
            />
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Switch > Switch disabledVue demo works fine 1`] = `
<div
  class=""
>
  <div
    class="t-cell-group"
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关开启禁用
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked t-is-disabled"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关关闭禁用
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-disabled"
          >
            <!--v-if-->
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关开启禁用
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-checked t-is-disabled"
          >
            <span
              class="t-switch__text"
            >
              描述信息
            </span>
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered"
      >
        <div
          class="t-cell__left-icon"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          开关关闭禁用
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__right-icon"
        >
          
          <span
            class="t-switch t-is-disabled"
          >
            <span
              class="t-switch__text"
            >
              描述信息
            </span>
            <span
              class="t-switch__node"
              style=""
            />
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Switch > Switch mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Switch 开关
  </h1>
  <p
    class="summary"
  >
    开关用于切换当个设置项的状态，开启、关闭为两个互斥的操作
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      基础开关
    </p>
    
    <div
      class=""
    >
      <div
        class="t-cell-group"
      >
        <!--v-if-->
        <div
          class="t-cell-group__container"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              自定义颜色
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style="background-color: rgb(0, 168, 112);"
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              异步操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带描述信息开关
    </p>
    
    <div
      class=""
    >
      <div
        class="t-cell-group"
      >
        <!--v-if-->
        <div
          class="t-cell-group__container"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked"
              >
                <span
                  class="t-switch__text"
                >
                  描述信息
                </span>
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch"
              >
                <span
                  class="t-switch__text"
                >
                  描述信息
                </span>
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              自定义颜色
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked"
              >
                <span
                  class="t-switch__text"
                >
                  描述信息
                </span>
                <span
                  class="t-switch__node"
                  style="background-color: rgb(0, 168, 112);"
                />
              </span>
              
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      开关状态
    </p>
    
    <div
      class=""
    >
      <div
        class="t-cell-group"
      >
        <!--v-if-->
        <div
          class="t-cell-group__container"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关开启禁用
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked t-is-disabled"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关关闭禁用
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-disabled"
              >
                <!--v-if-->
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关开启禁用
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-checked t-is-disabled"
              >
                <span
                  class="t-switch__text"
                >
                  描述信息
                </span>
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left-icon"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              开关关闭禁用
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="t-cell__right-icon"
            >
              
              <span
                class="t-switch t-is-disabled"
              >
                <span
                  class="t-switch__text"
                >
                  描述信息
                </span>
                <span
                  class="t-switch__node"
                  style=""
                />
              </span>
              
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
